fix: while waiting for me to finish restructuring svg, layer-action-map is invisible

--- a/app/assets/stylesheets/_common.scss
+++ b/app/assets/stylesheets/_common.scss
@@ -308,7 +308,7 @@ input[type="radio"] {
   background-color: var(--color-bg-ambient-30);
   border-bottom: solid var(--color-grey-40);
   color: var(--color-green-70);
-  display: flex;
+  display: none;
   justify-content: flex-end;
   position: relative;
   align-items: center;
